@@ -225,6 +225,7 @@
                         <include>**/RunCucumberTest.java</include>
                     </includes>
                     <argLine>
+                        -Dnet.bytebuddy.experimental=true
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.lang.reflect=ALL-UNNAMED
